--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public --ci",
     "build-storybook": "build-storybook -s public",
-    "proxy": "http://localhost:8001"
+    "proxy": "http://localhost:8001",
+    "cypress": "cypress open -P ."
   },
   "browserslist": {
     "production": [
@@ -40,8 +41,12 @@
     "@storybook/react": "^5.0.10",
     "@testing-library/jest-dom": "^4.0.0",
     "@testing-library/react": "^8.0.7",
+    "@testing-library/react-hooks": "^7.0.2",
     "babel-loader": "^8.0.5",
-    "node-sass": "^4.14.0"
+    "cypress": "^9.1.1",
+    "node-sass": "^4.14.0",
+    "prop-types": "^15.7.2",
+    "react-test-renderer": "^16.9.0"
   },
   "jest": {
     "watchPathIgnorePatterns": [
